--- a/London Housing Case Study Overview #2.ipynb
+++ b/London Housing Case Study Overview #2.ipynb
@@ -276,6 +276,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#transposed the columns\n",
     "properties = properties.transpose()"
    ]
   },
@@ -547,6 +548,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# copied the dataframe so I could make changes to it without compromising the actual dataframe\n",
+    "\n",
     "test2 = properties.copy()"
    ]
   },
@@ -1044,6 +1047,7 @@
     }
    ],
    "source": [
+    "#reset index to add the index back\n",
     "test2.reset_index().head()"
    ]
   },
@@ -1054,6 +1058,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Replaced the columns with the first row\n",
     "test2.columns = test2.iloc[0]\n"
    ]
   },
@@ -1323,6 +1328,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dropped the first row \n",
     "test2 = test2.drop(test2.index[0])"
    ]
   },
@@ -1557,6 +1563,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#dropped the column labeled NaT\n",
     "test2 = test2.drop(columns='NaT')\n"
    ]
   },
@@ -1791,6 +1798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#added the index back\n",
     "test2.reset_index(inplace = True)"
    ]
   },
@@ -1801,6 +1809,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#changed some of the column names\n",
     "test2.rename(columns={'index': 'Boroughs'}, inplace=True)"
    ]
   },
@@ -2888,6 +2897,7 @@
     }
    ],
    "source": [
+    "#drop the city of london row\n",
     "test2.drop(test2.index[0])\n"
    ]
   },
@@ -2919,6 +2929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#turned integers into floats\n",
     "test2 = test2.apply(pd.to_numeric, errors='ignore')\n"
    ]
   },
@@ -2940,6 +2951,7 @@
     }
    ],
    "source": [
+    "#plotted the dataframe to show the increase in prices for each borough over time\n",
     "plt.figure(figsize=(12, 8))\n",
     "for borough in test2['Boroughs'].unique():\n",
     "    plt.plot(test2.columns[1:], test2[test2['Boroughs'] == borough].iloc[0, 1:], label=borough)\n",
@@ -2960,6 +2972,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculated the ratio of the Average Price for 1998 divided by the Average Price for 2018 for each borough\n",
+    "\n",
     "def create_price_ratio(df):\n",
     "    avg_price_1998 = test2['1998-01-01'].mean()\n",
     "    avg_price_2018 = test2['2018-01-01'].mean()\n",
@@ -3061,6 +3075,7 @@
     "    'Wandsworth': 0.2008117452965015,\n",
     "    'Westminster': 0.16085095178416486\n",
     "}\n",
+    "#put ratios in descending order\n",
     "\n",
     "sorted_data = dict(sorted(data.items(), key=lambda item: item[1], reverse=True))\n",
     "\n",
@@ -3069,13 +3084,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 74,
-   "id": "3d07f876",
+   "cell_type": "markdown",
+   "id": "d153ec50",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#conclusion- putting the boroughs ratios in descending order and using a line graph shows boroughs, such as Sutton and Richmond upon Thames, have experienced the least amount of pricing increases over the 20 year span, versus boroughs such as Westminster and Hackney have experienced the most the most.\n"
+    "#conclusion- putting the borough ratios in descending order and using a line graph shows boroughs, such as Sutton and Richmond upon Thames, have experienced the least amount of pricing increases over the 20 year span, versus boroughs such as Westminster and Hackney have experienced the most. The graph also shows that almost universally, they all experienced a drop in price around 2009 then a significant boost the following years.\n"
    ]
   },
   {
