--- a/London Housing Case Study Overview #2.ipynb
+++ b/London Housing Case Study Overview #2.ipynb
@@ -2929,7 +2929,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#turned integers into floats\n",
+    "#turned prices into floats\n",
     "test2 = test2.apply(pd.to_numeric, errors='ignore')\n"
    ]
   },
@@ -3085,7 +3085,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d153ec50",
+   "id": "77aa3343",
    "metadata": {},
    "source": [
     "#conclusion- putting the borough ratios in descending order and using a line graph shows boroughs, such as Sutton and Richmond upon Thames, have experienced the least amount of pricing increases over the 20 year span, versus boroughs such as Westminster and Hackney have experienced the most. The graph also shows that almost universally, they all experienced a drop in price around 2009 then a significant boost the following years.\n"
