--- a/London Housing Case Study Overview #2.ipynb
+++ b/London Housing Case Study Overview #2.ipynb
@@ -2972,7 +2972,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculated the ratio of the Average Price for 1998 divided by the Average Price for 2018 for each borough\n",
+    "#Calculated the ratio of the Average Price for 1998 divided by the Average Price for 2018 \n",
+    "#for each borough\n",
     "\n",
     "def create_price_ratio(df):\n",
     "    avg_price_1998 = test2['1998-01-01'].mean()\n",
@@ -3085,7 +3086,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77aa3343",
+   "id": "f60af412",
    "metadata": {},
    "source": [
     "#conclusion- putting the borough ratios in descending order and using a line graph shows boroughs, such as Sutton and Richmond upon Thames, have experienced the least amount of pricing increases over the 20 year span, versus boroughs such as Westminster and Hackney have experienced the most. The graph also shows that almost universally, they all experienced a drop in price around 2009 then a significant boost the following years.\n"
